--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,8 +27,9 @@ main {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    height: 100%;
+    height: 400px;
     margin: 10rem auto;
+    overflow: auto;
 }
 
 .add-task {
