--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -8,7 +8,9 @@ footer {
     text-shadow: .1rem .1rem #333;
 }
 
-footer p {
-    color: whitesmoke;
-    margin: 2.5rem 0;
+footer i{
+    color: var(--azul2);
+    font-size: 2rem;
+    font-weight: 700;
+    margin: 2rem .5rem;
 }
